(#6) Fix Overflow Hidden Bug for Results View - Use JS attach/remove .no-scroll to body on show/hide - Prevents scrolling on Results view to give 'app' feel

--- a/default.scss
+++ b/default.scss
@@ -614,7 +614,7 @@ footer {
 
 #results {
   height: 100vh;
-  overflow: hidden !important;
+  /* overflow: hidden !important; */
 }
 
 .results {
